[package]
name = "two-sided-marketplace"
version = "0.1.0"
description = "A two-sided marketplace for services using Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "two_sided_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"